# V.I.G.I.L

./: .gitignore  run_robin_b.py
robin_b_project_scaffold/: .gitignore  README.md  b_main.py  pyproject.toml  requirements.txt  service_main.py
robin_b_project_scaffold/policies/: current.yaml
robin_b_project_scaffold/robin_b/: agents.lnk
robin_b_project_scaffold/robin_b/RobinBAgent/: orchestrator.py
robin_b_project_scaffold/robin_b/b_core/: appraise.py  emobank.py
robin_b_project_scaffold/robin_b/runtime/: b_diagnose.py  b_prompt.py  b_propose.py  b_reflect.py  b_review.py  common.py  events_log.py
robin_b_project_scaffold/sample_a_repo/: agent.py  reminders.py
robin_b_project_scaffold/sample_data/: sample.jsonl
robin_b_project_scaffold/schemas/: emotions_registry.json
robin_b_project_scaffold/tests/: test_decay_bounds.py  test_identity_guard.py  test_patch_atomicity.py
