[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robin-b"
version = "0.1.0"
description = "Robin B: First-person reflection & code-coach for Robin A"
authors = [{name = "You"}]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.6",
    "sqlite-utils>=3.36",
    "python-dateutil>=2.9.0.post0",
    "typer>=0.12.3",
    "rich>=13.7.1",
]

[project.scripts]
robin-b = "b_main:app"
